Alignment issue fix in Mobile Version

--- a/css/index.css
+++ b/css/index.css
@@ -226,6 +226,19 @@ header nav a {
     margin-left: 8%;
   }
 }
+.home .text-content-into {
+  display: none;
+}
+@media (max-width: 500px) {
+  .home .text-content-into {
+    max-width: 86%;
+    display: block;
+    border-bottom: 2px dashed #C0C0C0;
+    margin-left: 8%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+  }
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
@@ -269,7 +282,10 @@ header nav a {
   .home .inverse-content {
     display: flex;
     flex-direction: column-reverse;
-    padding-left: 8%;
+    width: 92%;
+    padding-left: 0;
+    margin-left: 7%;
+    width: 83%;
   }
 }
 .home .inverse-content .text-content {
@@ -278,12 +294,18 @@ header nav a {
 }
 @media (max-width: 500px) {
   .home .inverse-content .text-content {
-    padding-left: 0.5%;
+    width: 96%;
   }
 }
 .home .inverse-content .img-content {
   padding-right: 1%;
   padding-left: 0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content .img-content {
+    width: 100%;
+    padding-right: 0;
+  }
 }
 .home .content-destination {
   width: 75%;
@@ -306,7 +328,8 @@ header nav a {
 @media (max-width: 500px) {
   .home .content-pick {
     flex-direction: column;
-    padding-left: 13%;
+    margin-left: 8%;
+    width: 85%;
   }
 }
 .home .content-pick .destination {
@@ -316,6 +339,7 @@ header nav a {
 @media (max-width: 500px) {
   .home .content-pick .destination {
     width: 85%;
+    margin-left: 6%;
   }
 }
 .home .content-pick .destination .btn {
